Fixed footer overlapping

--- a/src/main/resources/static/starter-template.css
+++ b/src/main/resources/static/starter-template.css
@@ -228,5 +228,9 @@ body {
   font-size: 20px;
 }
 
+.container{
+  margin-bottom: 100px;
+}
+
 .easyPaginateNav a {padding:5px;}
 .easyPaginateNav a.current {font-weight:bold;text-decoration:underline;}
